made last row readable and prevented partial cutoff by legend

--- a/src/streamlit_swipecards/frontend/style.css
+++ b/src/streamlit_swipecards/frontend/style.css
@@ -619,6 +619,10 @@ body {
   overflow: hidden !important;
 }
 
+.ag-grid-container .ag-center-cols-container {
+  padding-bottom: 16px;
+}
+
 .ag-grid-container.loading {
   filter: blur(8px);
   opacity: 0.7;
